# swm-sched

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STYLE.md  compile_commands.json
.github/workflows/: cmake-single-platform.yml  unittests-linux.yml
scripts/: json-to-bin.escript  result-to-str.escript  validator.escript
src/plugin-lib/: extended_rh.cpp  extended_rh.h  fcfs_implementation.cpp  fcfs_implementation.h  plugin_context.h  plugin_defs.h  plugin_desc.h  plugin_exports.h  timetable_info.cpp  timetable_info.h
src/plugins/dummy/: dummy_main.cpp
src/plugins/fair-sharing/: fair_sharing_main.cpp
src/plugins/fcfs/: fcfs_main.cpp
src/sched-exe/: cli_args.cpp  cli_args.h  main.cpp
src/sched-lib/: defs.h
src/sched-lib/alg/: algorithm.cpp  algorithm.h  algorithm_factory.cpp  algorithm_factory.h  algorithm_metrics.cpp  algorithm_metrics.h  lib_binding.cpp  lib_binding.h
src/sched-lib/auxl/: cli_args_parser.cpp  cli_args_parser.h  directory.cpp  directory.h  file.cpp  file.h  lib_funcs.cpp  lib_funcs.h  metrics.cpp  metrics.h  my_queue.h  time_counter.cpp  time_counter.h
src/sched-lib/chn/: chain.cpp  chain.h  chain_controller.cpp  chain_controller.h  chain_metrics.cpp  chain_metrics.h  metrics_snapshot.cpp  metrics_snapshot.h
src/sched-lib/ctrl/: command_context.h  commands.cpp  commands.h  constants.h  processor.cpp  processor.h  receiver.cpp  receiver.h  responses.cpp  responses.h  scheduling_info.cpp  scheduling_info.h  sender.cpp  sender.h  service.cpp  service.h  service_metrics.cpp  service_metrics.h
src/sched-lib/hw/: compute_unit.h  scanner.cpp  scanner.h
src/sched-lib/ifaces/: algorithm_desc_interface.h  compute_unit_interface.h  metrics_interface.h  plugin_events_interface.h  scheduling_info_interface.h  timetable_info_interface.h
tests/functional/: run-benchmarks  run-tests
tests/functional/pyutils/: jsoner.py  runner.py
tests/functional/setups/: benchmark1.json  benchmark2.json  fcfs-expected.hrl  fcfs.json
tests/functional/utils/: benchmark.py  template.gnuplot  test.py
tests/unit/: cli_args_tests.h  helpers.cpp  helpers.h  main.cpp  scheduling_info_configurator.cpp  scheduling_info_configurator.h  scheduling_info_presets.cpp  scheduling_info_presets.h  test_defs.h
tests/unit/alg_tests/: algorithm_factory_tests.h  algorithm_tests.h  all.h
tests/unit/auxl_tests/: all.h  cli_args_parser_tests.h  directory_tests.h  file_tests.h  lib_funcs_tests.h  metrics_tests.h  my_queue_tests.h  time_counter_tests.h
tests/unit/chn_tests/: all.h  chain_controller_tests.h  chain_tests.h  chn.h
tests/unit/ctrl_tests/: all.h  ctrl.h  processor_tests.h  receiver_tests.h  scheduling_info_tests.h  sender_tests.h
tests/unit/hw_tests/: all.h  scanner_tests.h
tests/unit/plg_tests/: all.h  fcfs_implementation_tests.h  plg.h
